<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_home__e">home_E</string>
    <string name="title_activity_word_game">WordGame</string>

    <string name="SignIn">SignIn</string>
    <string name="SignOut">SignUp</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="PhoneNumber_real">12345</string>
    <string name="Password">Password</string>
    <string name="Password_real">1234</string>
    <string name="Nariman">Nariman</string>
    <string name="Name">Name</string>
    <string name="hello">Hello</string>

</resources>
